--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,14 @@
     <title>Title</title>
 </head>
 <body>
+
+<style>
+.css_input {
+color: yellow;
+background-color: red;
+}
+</style>
+
 <h1>Новая страница</h1>
 {{a}}
 <h1>{{object_list}}</h1>
@@ -43,10 +51,11 @@
 <br>
 <form action="{% url 'thanks_page' %}" method="POST">
     {% csrf_token %}
-    <label>Имя</label>
-    <input name="name">
-    <label>Телефон</label>
-    <input name="phone">
+<!--    <label>Имя</label>-->
+<!--    <input name="name">-->
+<!--    <label>Телефон</label>-->
+<!--    <input name="phone">-->
+    {{ form.as_p }}
     <button type="submit">ОТПРАВИТЬ</button>
 </form>
 
