--- a/templates/index_old.html
+++ b/templates/index_old.html
@@ -6,12 +6,12 @@
 </head>
 <body>
 
-<style>
-.css_input {
-color: yellow;
-background-color: red;
-}
-</style>
+<!--<style>-->
+<!--.css_input {-->
+<!--color: yellow;-->
+<!--background-color: red;-->
+<!--}-->
+<!--</style>-->
 
 <h1>Новая страница</h1>
 {{a}}
