--- a/templates/base.html
+++ b/templates/base.html
@@ -1,9 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
 <!--    <title>Базовый шаблон</title>-->
     <title> {% block title %} Тайтл из базового шаблона {% endblock %} </title>
+    <link href="{% static 'style.css' %}" rel="stylesheet">
 
 </head>
 <body>
