--- a/templates/index.html
+++ b/templates/index.html
@@ -1,95 +1,15 @@
-<!doctype html>
-<html lang="ru">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="external.css" rel="stylesheet">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-
-    <title>Простой сайт</title>
-  </head>
-  <body>
-	<nav class="navbar navbar-light bg-light container">
-	  <a class="navbar-brand logo-top" href="#">
-	    <img src="./img/Logo.png" width="40" height="40" class="d-inline-block align-top" alt="" loading="lazy">
-	    Brand Name
-	  </a>
-	  <div class="contact-top">
-                <a class="whatsapp-number" href="https://web.whatsapp.com/"></a>
-                <a class="telegram-number" href="https://t.me/"></a>
-              <a class="phone-number text-dark" href="tel:+74957777777">
-              	<h5>+7(495)-777-77-77</h5></a>
-      </div>
-	</nav>
+<!--его родитель base-->
+{% extends 'base.html' %}
+{% load static %}
+{% block index %}
 
 	<!-- карусель -->
-  	<section>
-  		<div id="carouselExampleCaptions" class="carousel slide container" data-ride="carousel">
-		  <div class="carousel-inner">
-		    <div class="carousel-item active">
-		      <img src="./img/1.jpg" class="d-block w-100"  alt="...">
-		      <div class="carousel-caption d-none d-md-block">
-		        <h5 class="slaider_h">First slide label</h5>
-		        <p class="slaider_p">Nulla vitae elit libero, a pharetra augue mollis interdum.Nulla vitae elit libero, a pharetra augue mollis interdum.Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-		      </div>
-		    </div>
-		    <div class="carousel-item">
-		      <img src="./img/2.jpg" class="d-block w-100"  alt="...">
-		      <div class="carousel-caption d-none d-md-block">
-		        <h5 class="slaider_h">Second slide label</h5>
-		        <p class="slaider_p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-		      </div>
-		    </div>
-		    <div class="carousel-item">
-		      <img src="./img/4.jpg" class="d-block w-100"  alt="...">
-		      <div class="carousel-caption d-none d-md-block">
-		        <h5 class="slaider_h">Third slide label</h5>
-		        <p class="slaider_p">Praesent commodo cursus magna, vel scelerisque nisl consectetur. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-		      </div>
-		    </div>
-		  </div>
-		  <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-		    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-		    <span class="sr-only">Previous</span>
-		  </a>
-		  <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-		    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-		    <span class="sr-only">Next</span>
-		  </a>
-		</div>
-  	</section>
+{% include 'carusel.html' %}
+
   	<!-- Карточки -->
-  	<section>
-  		<div class="container">
-  			<h1 class="text-3">ПАКЕТЫ УСЛУГ</h1>
-  			<div class="row justify-content-center">
-  				<div class="card product_card" style="width: 18rem; background-color: #cd7f32;">
-				  <div class="card-body">
-				    <h5 class="card-title">BRONZE</h5>
-				    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-				    <h3>10 000 руб.</h3>
-				  </div>
-				</div>
-				<div class="card product_card" style="width: 18rem; background-color: #c0c0c0;">
-				  <div class="card-body">
-				    <h5 class="card-title">SILVER</h5>
-				    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-				    <h3>20 000 руб.</h3>
-				  </div>
-				</div>
-				<div class="card product_card" style="width: 18rem; background-color: #ffd700;">
-				  <div class="card-body">
-				    <h5 class="card-title">GOLD</h5>
-				    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-				    <h3>30 000 руб.</h3>
-				  </div>
-				</div>
-  			</div>	
-  		</div>
-  	</section>
+{% include 'price.html' %}
+
+
   	<!-- Таблица -->
   	<section>
   		<div class="container">
@@ -148,27 +68,4 @@
   		</div>
   	</section>
 
-    	<footer>
-  		<div class="container">
-  			<nav class="navbar navbar-light bg-light container">
-			    <a class="navbar-brand logo-top" href="#">
-			    	<img src="./img/Logo.png" width="40" height="40" class="d-inline-block align-top" alt="" loading="lazy">
-			    	Brand Name
-			    </a>
-	  			<div class="contact-top">
-	                <a class="whatsapp-number" href="https://web.whatsapp.com/"></a>
-	                <a class="telegram-number" href="https://t.me/"></a>
-	              	<a class="phone-number text-dark" href="tel:+74957777777">
-	              	<h5>+7(495)-777-77-77</h5></a>
-      			</div>
-			</nav>
-  		</div>
-  	    </footer>
-
-
-
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-  </body>
-</html>
+{% endblock %}
